# SIR-model-23

./: .gitignore  CMakeLists.txt  Relazione_programmazione_1.docx  collision.hpp  collision.test.cpp  evolve.test.cpp  evolve1.test.cpp  evolve2.test.cpp  first_part.cpp  infection.test.cpp  insert_functions.hpp  main.cpp  parameters.hpp  person.cpp  person.hpp  persona.cpp  persona.hpp  population.cpp  population.hpp  second_part.cpp  sir.cpp  sir.hpp  sir.test.cpp  vaccination.test.cpp
